backend/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: task-management-api
  namespace: task-management
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 10k
spec:
  ingressClassName: nginx
  rules:
    - host: task-management.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: task-management-api
                port:
                  name: http
